print하는거 추가중(ex 평균 표준편차)

--- a/assignment_12.ipynb
+++ b/assignment_12.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,63 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3.38156 3.38911]\n",
-      " [4.52788 5.85418]\n",
-      " [2.65568 4.41199]\n",
-      " [2.76523 3.71541]\n",
-      " [2.84656 4.17551]\n",
-      " [3.89067 6.48838]\n",
-      " [3.47581 3.63285]\n",
-      " [5.9113  6.68077]\n",
-      " [3.92889 5.09845]\n",
-      " [4.56184 5.6233 ]\n",
-      " [4.57407 5.39765]\n",
-      " [4.37173 5.46117]\n",
-      " [4.19169 4.95469]\n",
-      " [5.24409 4.66149]\n",
-      " [2.83584 3.76802]\n",
-      " [5.63527 6.31211]\n",
-      " [4.68633 5.66524]\n",
-      " [2.85051 4.62646]\n",
-      " [5.11016 7.3632 ]\n",
-      " [5.18256 4.64651]\n",
-      " [5.70733 6.68104]\n",
-      " [3.57968 4.80278]\n",
-      " [5.63938 6.12044]\n",
-      " [4.26347 4.68943]\n",
-      " [2.53652 3.88449]\n",
-      " [3.22383 4.94256]\n",
-      " [4.92949 5.95502]\n",
-      " [5.79296 5.10839]\n",
-      " [2.81685 4.81896]\n",
-      " [3.88882 5.10037]\n",
-      " [3.34323 5.89301]\n",
-      " [5.87973 5.52142]\n",
-      " [3.10392 3.8571 ]\n",
-      " [5.33151 4.68074]\n",
-      " [3.37543 4.56538]\n",
-      " [4.77668 6.25435]\n",
-      " [2.67575 3.73097]\n",
-      " [5.50028 5.67948]\n",
-      " [1.7971  3.24754]\n",
-      " [4.32251 5.1111 ]\n",
-      " [4.421   6.02564]\n",
-      " [3.1793  4.43686]\n",
-      " [3.03354 3.97879]\n",
-      " [4.60935 5.87979]\n",
-      " [2.96379 3.30025]\n",
-      " [3.97176 5.40774]\n",
-      " [1.18023 2.87869]\n",
-      " [1.91895 5.07108]\n",
-      " [3.95525 4.50533]\n",
-      " [5.11795 6.08507]]\n",
       "[3.38156 4.52788 2.65568 2.76523 2.84656 3.89067 3.47581 5.9113  3.92889\n",
       " 4.56184 4.57407 4.37173 4.19169 5.24409 2.83584 5.63527 4.68633 2.85051\n",
       " 5.11016 5.18256 5.70733 3.57968 5.63938 4.26347 2.53652 3.22383 4.92949\n",
@@ -114,7 +64,7 @@
     "\n",
     "x = feature[:,0]\n",
     "y = feature[:,1]\n",
-    "print(feature)\n",
+    "#print(feature)\n",
     "print(x)\n",
     "print(y)\n",
     "number_data     = np.size(feature, 0)\n",
@@ -130,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -168,23 +118,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "m 3.989265199999999 5.002806\n",
-      "s 1.161260585149156 1.0131222834742113\n"
+      "mean of x =  3.989265199999999\n",
+      "mean of y =  5.002806\n",
+      "std of x =  1.161260585149156\n",
+      "std of y =  1.0131222834742113\n"
      ]
     }
    ],
    "source": [
     "x_m , y_m = np.mean(feature,axis=0)\n",
-    "#print('m',x_m,y_m)\n",
+    "print('mean of x = ',x_m)\n",
+    "print('mean of y = ',y_m)\n",
     "x_std, y_std = np.std(feature,axis=0)\n",
-    "#print('s',x_std,y_std)\n",
+    "print('std of x = ',x_std)\n",
+    "print('std of y = ',y_std)\n",
+    "\n",
     "x = (x-x_m)/x_std\n",
     "y = (y-y_m)/y_std\n",
     "\n",
@@ -201,7 +156,7 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "    \n",
-    "    return feature"
+    "    #return feature"
    ]
   },
   {
@@ -213,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -531,65 +486,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.5233151 , -1.59279489],\n",
-       "       [ 0.46381907,  0.84034673],\n",
-       "       [-1.14839444, -0.58316356],\n",
-       "       [-1.0540573 , -1.27072124],\n",
-       "       [-0.98402134, -0.8165806 ],\n",
-       "       [-0.0849036 ,  1.46633237],\n",
-       "       [-0.4421533 , -1.35221189],\n",
-       "       [ 1.65512791,  1.65623047],\n",
-       "       [-0.05199109,  0.09440519],\n",
-       "       [ 0.49306315,  0.61245716],\n",
-       "       [ 0.50359481,  0.38972985],\n",
-       "       [ 0.32935312,  0.45242712],\n",
-       "       [ 0.17431471, -0.04749279],\n",
-       "       [ 1.08057125, -0.33689517],\n",
-       "       [-0.99325269, -1.21879266],\n",
-       "       [ 1.41742932,  1.29234548],\n",
-       "       [ 0.60026562,  0.65385394],\n",
-       "       [-0.98061987, -0.37147145],\n",
-       "       [ 0.96523968,  2.32982142],\n",
-       "       [ 1.02758572, -0.35168114],\n",
-       "       [ 1.47948257,  1.65649698],\n",
-       "       [-0.3527074 , -0.1974352 ],\n",
-       "       [ 1.42096858,  1.10315805],\n",
-       "       [ 0.23612685, -0.30931705],\n",
-       "       [-1.25100707, -1.10383121],\n",
-       "       [-0.65914163, -0.05946567],\n",
-       "       [ 0.80965876,  0.93988062],\n",
-       "       [ 1.55322141,  0.10421644],\n",
-       "       [-1.00960561, -0.18146477],\n",
-       "       [-0.08649669,  0.09630032],\n",
-       "       [-0.55632233,  0.87867379],\n",
-       "       [ 1.62794193,  0.51189675],\n",
-       "       [-0.76240011, -1.13086645],\n",
-       "       [ 1.15585151, -0.3178945 ],\n",
-       "       [-0.52859385, -0.43176032],\n",
-       "       [ 0.678069  ,  1.2353336 ],\n",
-       "       [-1.1311115 , -1.25536277],\n",
-       "       [ 1.30118495,  0.6679095 ],\n",
-       "       [-1.88774615, -1.73253123],\n",
-       "       [ 0.28696815,  0.10689134],\n",
-       "       [ 0.37178115,  1.00958593],\n",
-       "       [-0.69748789, -0.55861569],\n",
-       "       [-0.82300666, -1.01075262],\n",
-       "       [ 0.53397558,  0.86562502],\n",
-       "       [-0.8830707 , -1.68050395],\n",
-       "       [-0.01507431,  0.39968917],\n",
-       "       [-2.41895336, -2.09660377],\n",
-       "       [-1.78281708,  0.06738969],\n",
-       "       [-0.02929162, -0.49103253],\n",
-       "       [ 0.97194791,  1.06824617]])"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
